--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,10 @@
 	<classpathentry kind="src" path="RercusiveMethods"/>
 	<classpathentry kind="src" path="TowersOfHanoi"/>
 	<classpathentry kind="src" path="Fibonacci"/>
+	<classpathentry kind="src" path="Palindrome"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/stdlib-package.jar"/>
+	<classpathentry kind="lib" path="lib/guava-18.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
