--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="src" path="TowersOfHanoi"/>
 	<classpathentry kind="src" path="Fibonacci"/>
 	<classpathentry kind="src" path="Palindrome"/>
+	<classpathentry kind="src" path="RandonGen"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/stdlib-package.jar"/>
 	<classpathentry kind="lib" path="lib/guava-18.0.jar"/>
