--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,8 @@
 	<classpathentry kind="src" path="Fibonacci"/>
 	<classpathentry kind="src" path="Palindrome"/>
 	<classpathentry kind="src" path="RandonGen"/>
+	<classpathentry kind="src" path="ThrowEggs"/>
+	<classpathentry kind="src" path="Balance"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/stdlib-package.jar"/>
 	<classpathentry kind="lib" path="lib/guava-18.0.jar"/>
