--- a/.classpath
+++ b/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry kind="src" path="RandonGen"/>
 	<classpathentry kind="src" path="ThrowEggs"/>
 	<classpathentry kind="src" path="Balance"/>
+	<classpathentry kind="src" path="3sumMystery"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/stdlib-package.jar"/>
 	<classpathentry kind="lib" path="lib/guava-18.0.jar"/>
