--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,7 @@
 	<classpathentry kind="src" path="ThrowEggs"/>
 	<classpathentry kind="src" path="Balance"/>
 	<classpathentry kind="src" path="3sumMystery"/>
+	<classpathentry kind="src" path="ConsecutiveInts"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/stdlib-package.jar"/>
 	<classpathentry kind="lib" path="lib/guava-18.0.jar"/>
